chore: finalize remaining project changes